# moon-watcher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cron.yml
src/watcher/: __init__.py  cli.py  executor.py  monitor.py  scheduler.py
tests/: test_watcher.py
